--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -38,8 +38,19 @@
             <td th:text="${sales.id}">id</td>
             <td th:text="${sales.saleType}">saleType</td>
             <td th:text="${sales.saleName}">saleName</td>
-            <td th:text="编辑" colspan="4" align="center"></td>
-            <td th:text="删除" colspan="4" align="center"></td>
+            <td>
+
+                <form th:action="@{/tDepartmentSales/editView(id=${sales.id})}" th:object="${model}"
+                      method="post">
+                    <button type="submit">编辑</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/tDepartmentSales/deleteById(id=${sales.id})}"
+                      th:object="${model}" method="post">
+                    <button type="submit">删除</button>
+                </form>
+            </td>
         </tr>
 
     </table>
