--- a/src/main/resources/templates/super.html
+++ b/src/main/resources/templates/super.html
@@ -37,8 +37,19 @@
             <td th:text="${super.id}">id</td>
             <td th:text="${super.type}">superType</td>
             <td th:text="${super.name}">superName</td>
-            <td th:text="编辑" colspan="4" align="center"></td>
-            <td th:text="删除" colspan="4" align="center"></td>
+            <td>
+
+                <form th:action="@{/tDepartmentSuper/editView(id=${super.id})}" th:object="${model}"
+                      method="post">
+                    <button type="submit">编辑</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/tDepartmentSuper/deleteById(id=${super.id})}"
+                      th:object="${model}" method="post">
+                    <button type="submit">删除</button>
+                </form>
+            </td>
         </tr>
 
     </table>
