--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -35,8 +35,19 @@
         <tr th:each="finance:${financeList}">
             <td th:text="${finance.id}">id</td>
             <td th:text="${finance.name}">financeName</td>
-            <td th:text="编辑" colspan="4" align="center"></td>
-            <td th:text="删除" colspan="4" align="center"></td>
+            <td>
+
+                <form th:action="@{/tDepartmentFinance/editView(id=${finance.id})}" th:object="${model}"
+                      method="post">
+                    <button type="submit">编辑</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/tDepartmentFinance/deleteById(id=${finance.id})}"
+                      th:object="${model}" method="post">
+                    <button type="submit">删除</button>
+                </form>
+            </td>
         </tr>
 
     </table>
