--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -37,8 +37,19 @@
             <td th:text="${manager.id}">id</td>
             <td th:text="${manager.type}">managerType</td>
             <td th:text="${manager.name}">managerName</td>
-            <td th:text="编辑" colspan="4" align="center"></td>
-            <td th:text="删除" colspan="4" align="center"></td>
+            <td>
+
+                <form th:action="@{/tDepartmentManager/editView(id=${manager.id})}" th:object="${model}"
+                      method="post">
+                    <button type="submit">编辑</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/tDepartmentManager/deleteById(id=${manager.id})}"
+                      th:object="${model}" method="post">
+                    <button type="submit">删除</button>
+                </form>
+            </td>
         </tr>
 
     </table>
