--- a/src/main/resources/templates/fundesigner.html
+++ b/src/main/resources/templates/fundesigner.html
@@ -19,7 +19,11 @@
 
         </div>
     </form>
+    <form th:action="@{/tDepartmentFundesigner/addView}" method="post">
 
+        <input type="submit" value="新建"></input>
+
+    </form>
 </div>
 <div>
     <table class="table table-bordered table-striped">
