--- a/src/main/resources/templates/largeArea.html
+++ b/src/main/resources/templates/largeArea.html
@@ -18,7 +18,11 @@
 
         </div>
     </form>
+    <form th:action="@{/tLargeArea/addView}" method="post">
 
+        <input type="submit" value="新建"></input>
+
+    </form>
 </div>
 <div>
     <table class="table table-bordered table-striped">
