--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -18,6 +18,13 @@
 
         </div>
     </form>
+
+
+    <form th:action="@{/tDepartmentSales/addView}" method="post">
+
+        <input type="submit" value="新建"></input>
+
+    </form>
 </div>
 
 
