--- a/src/main/resources/templates/designer.html
+++ b/src/main/resources/templates/designer.html
@@ -23,7 +23,7 @@
 
     <form th:action="@{/tDepartmentDesigner/addView}" method="post">
 
-        <input type="submit">新建</input>
+        <input type="submit" value="新建"></input>
 
     </form>
 </div>
@@ -45,17 +45,17 @@
             <td th:text="${designer.id}">id</td>
             <td th:text="${designer.type}">mRoleName</td>
             <td th:text="${designer.name}">name</td>
-            <td th:text="编辑" colspan="4" align="center"></td>
-            <td th:text="删除" colspan="4" align="center"></td>
 
             <td>
 
-                <form th:action="@{/tDepartmentDesigner/editView(designerId=${designer.id})}" th:object="${designerModel}" method="post">
+                <form th:action="@{/tDepartmentDesigner/editView(designerId=${designer.id})}"
+                      th:object="${designerModel}" method="post">
                     <button type="submit">编辑</button>
                 </form>
             </td>
             <td>
-                <form th:action="@{/tDepartmentDesigner/deleteDesignerById(designerId=${designer.id})}" th:object="${designerModel}" method="post">
+                <form th:action="@{/tDepartmentDesigner/deleteDesignerById(designerId=${designer.id})}"
+                      th:object="${designerModel}" method="post">
                     <button type="submit">删除</button>
                 </form>
             </td>
