--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -20,6 +20,12 @@
         </div>
     </form>
 
+    <form th:action="@{/tDepartmentFinance/addView}" method="post">
+
+        <input type="submit" value="新建"></input>
+
+    </form>
+
 </div>
 <div>
     <table class="table table-bordered table-striped">
