--- a/src/main/resources/templates/super.html
+++ b/src/main/resources/templates/super.html
@@ -20,6 +20,12 @@
 
         </div>
     </form>
+
+    <form th:action="@{/tDepartmentSuper/addView}" method="post">
+
+        <input type="submit" value="新建"></input>
+
+    </form>
 </div>
 <div>
     <table class="table table-bordered table-striped">
