--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -10,7 +10,7 @@
 
     <form th:action="@{/tDepartmentFinance/searchList}" method="post" th:object="${tDepartmentFinanceModel}">
 
-        <label class="col-md-1 control-label">用户名：</label>
+        <label class="col-md-1 control-label">财务姓名：</label>
         <div class="col-md-2">
             <input type="text" name="name" placeholder="请输入财务人员名称" class="form-control"/>
         </div>
