--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -35,8 +35,8 @@
         <thead>
         <tr>
             <td>id</td>
-            <td>角色编号</td>
-            <td>角色名称</td>
+            <td>销售编号</td>
+            <td>销售名称</td>
             <td colspan="8" align="center">操作权限</td>
         </tr>
 
