--- a/src/main/resources/templates/super.html
+++ b/src/main/resources/templates/super.html
@@ -33,7 +33,7 @@
         <thead>
         <tr>
             <td>id</td>
-            <td>项目监理类型ID</td>
+            <td>项目监理类型</td>
             <td>项目监理姓名</td>
             <td colspan="8" align="center">操作权限</td>
         </tr>
