--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -10,7 +10,7 @@
 
     <form th:action="@{/tDepartmentManager/searchList}" method="post" th:object="${tDepartmentManagerModel}">
 
-        <label class="col-md-1 control-label">大区域名称：</label>
+        <label class="col-md-1 control-label">项目经理名称：</label>
         <div class="col-md-2">
             <input type="text" name="name" placeholder="请输入大区域名称" class="form-control"/>
         </div>
