--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-actions">
-            <input type="submit" value="Login"/>
+            <input type="submit" value="登录"/>
         </div>
     </form>
 </div>
